--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 # This config file contains the config of your webpages
 # You may also want to update /config/webpack.pwa.js in case you want to generate a Progressive Web App
 
-title: Mobile App Landing Page Template
-email: contact@sandoche.com
+title: Rust Admin Tool
+email: artycake.developer@gmail.com
 description: Free to use static landing page template to showcase your mobile app
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mobileapplandingpage.learn.uno" # the base hostname & protocol for your site, e.g. http://example.com
 theme_color: '#efeeff'
-twitter_username: sandochee
+twitter_username: rat_app
 github_username:  sandoche
 author: Sandoche Adittane
 logo: assets/images/large-logo.png
