--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -1,16 +1,14 @@
 app:
   screenshots: Screenshots
   description: Description
-  featured: Featured in
 
 footer:
-  copyright: Made with ❤️ in Europe 🇪🇺 by <a href="https://www.sandoche.com" target="_blank">Sandoche</a>
+  copyright: Copyright © Artem Korzh 2022
   links:
-    - title: Github
-      url: https://github.com/sandoche/Mobile-app-landingpage-template
-      target: _blank
-    - title: Donate
-      url: https://paypal.me/kanbanote
+    - title: Twitter
+      url: http://twitter.com/app_rat
       target: _blank
     - title: Privacy
       url: /privacy
+    - title: Terms of use
+      url: /terms
