--- a/_data/app.yml
+++ b/_data/app.yml
@@ -1,8 +1,8 @@
 name: Rust Admin Tool
 description: Handy tool for Rust servers administrators 
-full_description: 'Take your Rust server administration to the next level with Rust Admin Tool! Our app makes managing your Rust game server easier than ever before. With just a few taps, you can easily manage your players, chat with your server, and access your server's RCON console.</br>
-Say goodbye to the hassle of remembering commands and entering them manually into the web console. Rust Admin Tool streamlines the process, allowing you to perform common tasks with ease.</br>
-Our app is designed specifically for Rust server administrators, providing all the essential features you need to manage your server efficiently. With Rust Admin Tool, you can focus on what really matters - providing your players with the best possible Rust experience.</br>
+full_description: 'Take your Rust server administration to the next level with Rust Admin Tool! Our app makes managing your Rust game server easier than ever before. With just a few taps, you can easily manage your players, chat with your server, and access your server's RCON console.<br/>
+Say goodbye to the hassle of remembering commands and entering them manually into the web console. Rust Admin Tool streamlines the process, allowing you to perform common tasks with ease.<br/>
+Our app is designed specifically for Rust server administrators, providing all the essential features you need to manage your server efficiently. With Rust Admin Tool, you can focus on what really matters - providing your players with the best possible Rust experience.<br/>
 Download Rust Admin Tool today and take control of your Rust game server like never before!'
 android: https://play.google.com/store/apps/details?id=com.artycake.rat
 iOS: https://apps.apple.com/us/app/rust-admin-tool/id1623064440
